--- a/index.html
+++ b/index.html
@@ -17,38 +17,39 @@
     <div class="row">
       <div class="col-3">
         <div class="box orange">3 columns</div>
-      </div>
+      </div> <!--end of 3 column div-->
       <div class="col-3">
         <div class="box blue">3 columns</div>
-      </div>
+      </div> <!--end of 3 column div-->
       <div class="col-3">
         <div class="box green">3 columns</div>
-      </div>
+      </div> <!--end of 3 column div-->
       <div class="col-3">
         <div class="box black">3 columns</div>
-      </div>
-    </div>
+      </div> <!--end of 3 column div-->
+    </div> <!--end of 3 column row-->
 
 
     <div class="row">
       <div class="col-4">
         <div class="box orange">4 columns</div>
-      </div>
+      </div> <!--end of 4 column div-->
       <div class="col-4">
         <div class="box blue">4 columns</div>
-      </div>
+      </div> <!--end of 4 column div-->
       <div class="col-4">
         <div class="box green">4 columns</div>
-      </div>
-    </div>
+      </div> <!--end of 4 column div-->
+    </div> <!--end of 4 column row-->
 
     <div class="row">
       <div class="col-6">
         <div class="box orange">6 columns</div>
-      </div>
+      </div> <!--end of 6 column div-->
       <div class="col-6">
         <div class="box blue">6 columns</div>
-    </div>
+      </div> <!--end of 6 column div-->
+    </div> <!--end of 6 column row-->
 
     <div class="row">
       <div class="col-12">
